# segmentation_and_encode

./: CMakeLists.txt  README.md  main.c
figure/: 002.raw
include/: dip.h  huffman.h
result/: 002.txt  002_decode.raw  002_ostu.raw
src/: dip.c  huffman.c
